--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -32,6 +32,10 @@ tower-http = { version = "0.6.6", features = ["cors"] }
 md5 = "0.8.0"
 hex = "0.4"
 
+#SQLite DB
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }
 
-
-
+# In Cargo.toml
+jsonwebtoken = { version = "10.1.0", features = ["std"] }
+# For secure password hashing
+argon2 = "0.5.3"
