--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -33,9 +33,19 @@ md5 = "0.8.0"
 hex = "0.4"
 
 #SQLite DB
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "macros", "sqlite",] }
 
-# In Cargo.toml
-jsonwebtoken = { version = "10.1.0", features = ["std"] }
+jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
+
+
 # For secure password hashing
 argon2 = "0.5.3"
+async-trait = "0.1.89"
+axum-extra = { version = "0.10.3", features = ["typed-header"] }
+uuid = { version = "1.0", features = ["v4"] }
+base64 = "0.22.1"
+
+bcrypt = "0.17.1"
+dashmap = "6.0"
+lazy_static = "1.5"
+headers = "0.4.1"
