unauthorized error corrected

--- a/backend/.env
+++ b/backend/.env
@@ -24,4 +24,7 @@ JWT_EXPIRATION_HOURS=24
 
 # .env
 MOJO_ROOT_USER="admin"
-MOJO_ROOT_PASSWORD="My$ecureP@ssword!"
+MOJO_ROOT_PASSWORD="My@ssword!"
+
+#S3 server seed
+S3_OWNER_ID = "kC1rT9aN2bX3jP5yM8qO"
