--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,6 +31,7 @@ chrono = { version = "0.4", features = ["serde"] }
 tower-http = { version = "0.6.6", features = ["cors"] }
 md5 = "0.8.0"
 hex = "0.4"
+sha2 = "0.10"
 
 #SQLite DB
 sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "macros", "sqlite",] }
