--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lucide/lab": "^0.1.2",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "lucide-react": "^0.546.0",
