--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -55,6 +55,9 @@ dotenvy = "0.15.7"
 
 # ---- xattr – optional, only on Unix ----
 xattr = { version = "1.3", optional = true }
+futures-util = "0.3.31"
+http-range = "0.1.5"
+httpdate = "1.0.3"
 
 # Explicitly enable it for Unix targets
 [target.'cfg(unix)'.dependencies]
