--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 tokio = { version = "1", features = ["full"] }
 axum = "0.8.6"
 # For asynchronous file I/O and streaming
-tokio-util = { version = "0.7", features = ["io"] }
+tokio-util = { version = "0.7.16", features = ["io"] }
 # For custom, ergonomic, and crash-free error handling
 thiserror = "2.0.17"
 
@@ -57,7 +57,15 @@ dotenvy = "0.15.7"
 xattr = { version = "1.3", optional = true }
 futures-util = "0.3.31"
 http-range = "0.1.5"
+futures-core = "0.3.31"
 httpdate = "1.0.3"
+reqwest = {version="0.12.24",features = ["stream","json"]}
+once_cell = "1.21.3"
+
+nix = { version = "0.30.1", optional = true } # optional readahead
+async-stream = "0.3.6"
+bytes  = "1.11.0"
+
 
 # Explicitly enable it for Unix targets
 [target.'cfg(unix)'.dependencies]
