--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -66,6 +66,10 @@ nix = { version = "0.30.1", optional = true } # optional readahead
 async-stream = "0.3.6"
 bytes  = "1.11.0"
 hmac = "0.12.1"
+http-body-util = "0.1.3"
+pin-project = "1.1.10"
+winapi = { version = "0.3.9", features = ["winbase", "fileapi"] }
+memmap2 = "0.9.9"
 
 
 # Explicitly enable it for Unix targets
