--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -71,6 +71,7 @@ pin-project = "1.1.10"
 winapi = { version = "0.3.9", features = ["winbase", "fileapi"] }
 memmap2 = "0.9.9"
 tower = "0.5.2"
+rand = "0.9.2"
 
 
 # Explicitly enable it for Unix targets
